--- a/blog.html
+++ b/blog.html
@@ -184,7 +184,7 @@
                             <ul>
                                 <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">alaweerauto@gmail.com
                                 </a></li>
-                                <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE, Fax: 03 7213041 - P. . Box: 63951
+                                <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE 
                                 </li>
                                 <li><i class="fas fa-clock"></i>8AM - 10PM</li>
                             </ul>
@@ -513,15 +513,15 @@
                         <div class="widget widget_tag_cloud">
                             <h3 class="widget_title">Tags</h3>
                             <div class="tagcloud">
-                                <a href="blog.html">Mechanic</a>
-                                <a href="blog.html">Auto Fixers</a>
-                                <a href="blog.html">Car Fix</a>
-                                <a href="blog.html">Pro Auto Fix</a>
-                                <a href="blog.html">Service</a>
-                                <a href="blog.html">Auto Fix</a>
+                                <a href="blog.html">Quality Spares</a>
+                                <a href="blog.html">Auto Parts</a>
+                                <a href="blog.html">OEM Parts</a>
+                                <a href="blog.html">Part Supplier</a>
+                                <a href="blog.html">Aftermarket Parts</a>
+                                <a href="blog.html">Brake Systems</a>
                                 <a href="blog.html">Auto Repair</a>
-                                <a href="blog.html">Masters</a>
-                                <a href="blog.html">Automotive</a>
+                                <a href="blog.html">Suspension Systems</a>
+                                <a href="blog.html">Vehicle Upkeep</a>
                             </div>
                         </div>   
                     </aside>
@@ -542,14 +542,15 @@
                 <div class="media-body">
                     <h6 class="title text-white">Requesting A Call:</h6>
                     <h4 class="link">
-                        <a class="text-white" href="tel:6295550129">(629) 555-0129</a>
+                        <a class="text-white" href="tel:6295550129"> 03 7213838</a>
                     </h4>
                 </div>
             </div>
             <div class="social-btn">
-                <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <!-- <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a> -->
+                <a href="https://maps.app.goo.gl/bwsZcFGLsdT4tY7Z7"> <img src="assets/img/icon/google.svg" alt="img"></a>
             </div>
         </div>
     </div>
@@ -567,14 +568,14 @@
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="team.html">Team</a></li>
+                                    <!-- <li><a href="team.html">Team</a></li> -->
                                     <li><a href="contact.html">Faq</a></li>
                                     <li><a href="contact.html">Privacy Policy</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-auto">
+                    <!-- <div class="col-md-6 col-xl-auto">
                         <div class="widget widget_nav_menu footer-widget">
                             <h3 class="widget_title">Services</h3>
                             <div class="menu-all-pages-container">
@@ -587,21 +588,21 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget footer-widget">
                             <h3 class="widget_title">Contact</h3>
                             <div class="widget-contact">
-                                <p><a href="tel:888123456765">(+888) 123 456 765</a></p>
-                                <p><a href="mailto:infoname@mail.com">infoname@mail.com</a></p>
-                                <p>Old city Street,USA <br> 1212 New york-3500</p>
+                                <p><a href="tel:888123456765"> 03 7213838</a></p>
+                                <p><a href="mailto:infoname@mail.com">alaweerauto@gmail.com</a></p>
+                                <p>Sanaiya- Al Ain Abu Dhabi UAE  <br> Fax: 03 7213041 -  Box: 63951</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget footer-widget widget-newsletter">
                             <h3 class="widget_title">Get In Touch</h3>
-                            <p class="footer-text mb-50">Lorem Ipsum is simply is dumiomy is text Lorem Ipsum is simply</p>
+                            <p class="footer-text mb-50">We’re here to assist you with all your auto spare parts needs!</p>
                             <form class="newsletter-form">
                                 <div class="form-group">
                                     <input class="form-control" type="email" placeholder="Your Email Address" required="">
@@ -616,10 +617,10 @@
         <div class="copyright-wrap">
             <div class="container">
                 <div class="row gy-3 justify-content-md-between justify-content-center">
-                    <div class="col-auto align-self-center"><p class="copyright-text text-center">© <a href="#">Fixturbo</a> 2024 | All Rights Reserved</p></div>
+                    <div class="col-auto align-self-center"><p class="copyright-text text-center">© <a href="#">AL AWEER AUTO SPARE PARTS</a> 2018 | All Rights Reserved</p></div>
                     <div class="col-auto">
                         <div class="footer-links">
-                            <a href="contact.html">Tarms & Condition</a>
+                            <a href="contact.html">Terms & Condition</a>
                             <a href="contact.html">Privacy Policy</a>
                             <a href="contact.html">Contact Us</a>
                         </div>
