--- a/home-6.html
+++ b/home-6.html
@@ -955,8 +955,8 @@
                     <div class="product-intro-card">                        
                         <div class="intro-card-details">
                             <h6 class="intro-card-subtitle">Top Brand</h6>
-                            <h4 class="intro-card-title"><a href="#">Engine pistons and cog</a></h4>
-                            <a href="shop.html" class="btn style-border2 style-radius">Shop Now<i class="fas fa-arrow-right ms-2"></i></a>
+                            <h4 class="intro-card-title"><a href="#"> Engine Components</a></h4>
+                            <a href="shop.html" class="btn style-border2 style-radius">Enquire Now<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                         <div class="intro-card-img">
                             <img src="assets/img/update-img/product/3-1.png" alt="img">
@@ -967,8 +967,8 @@
                     <div class="product-intro-card">                        
                         <div class="intro-card-details">
                             <h6 class="intro-card-subtitle">15% Off</h6>
-                            <h4 class="intro-card-title"><a href="#">Windshield wiper motor</a></h4>
-                            <a href="shop.html" class="btn style-border2 style-radius">Shop Now<i class="fas fa-arrow-right ms-2"></i></a>
+                            <h4 class="intro-card-title"><a href="#">Wiper Systems</a></h4>
+                            <a href="shop.html" class="btn style-border2 style-radius">Enquire Now<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                         <div class="intro-card-img">
                             <img src="assets/img/update-img/product/3-2.png" alt="img">
@@ -982,8 +982,8 @@
                         </div>                      
                         <div class="intro-card-details">
                             <h6 class="intro-card-subtitle">15% Off</h6>
-                            <h4 class="intro-card-title"><a href="#">Engine pistons and cog</a></h4>
-                            <a href="shop.html" class="btn style-border2 style-radius">Shop Now<i class="fas fa-arrow-right ms-2"></i></a>
+                            <h4 class="intro-card-title"><a href="#">Cutting-Edge Engine Parts</a></h4>
+                            <a href="shop.html" class="btn style-border2 style-radius">Enquire Now<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                         
                     </div>
@@ -996,7 +996,7 @@
                         <div class="intro-card-details">
                             <h6 class="intro-card-subtitle">15% Off</h6>
                             <h4 class="intro-card-title"><a href="#">Windshield wiper <br> motor</a></h4>
-                            <a href="shop.html" class="btn style-border2 style-radius">Shop Now<i class="fas fa-arrow-right ms-2"></i></a>
+                            <a href="shop.html" class="btn style-border2 style-radius">Enquire Now<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                         
                     </div>
@@ -1319,12 +1319,13 @@
                         <div class="widget footer-widget widget-about">
                             <h3 class="widget_title">About Us</h3>
                             <p class="footer-text mb-30">It is a long established fact that a reader will be distracted</p>
-                            <!-- <div class="social-btn style3">
-                                <a href="https://www.instagram.com/" tabindex="-1"><i class="fab fa-instagram"></i></a>
+                            <div class="social-btn style3">
+                                <!-- <a href="https://www.instagram.com/" tabindex="-1"><i class="fab fa-instagram"></i></a>
                                 <a href="https://linkedin.com/" tabindex="-1"><i class="fab fa-linkedin-in"></i></a>
                                 <a href="https://twitter.com/" tabindex="-1"><i class="fab fa-twitter"></i></a>                                
-                                <a href="https://facebook.com/" tabindex="-1"><i class="fab fa-facebook-f"></i></a>
-                            </div> -->
+                                <a href="https://facebook.com/" tabindex="-1"><i class="fab fa-facebook-f"></i></a> -->
+                                <a href="https://maps.app.goo.gl/bwsZcFGLsdT4tY7Z7"> <img src="assets/img/icon/google.svg" alt="img"></a>
+                            </div>
                         </div>
                     </div> 
                     <div class="col-md-6 col-xl-auto">
@@ -1364,8 +1365,8 @@
                                     </div>
                                     <div class="contact-grid-details">
                                         <p>Address</p>
-                                        <h6>Sanaiya- Al Ain Abu Dhabi UAE 
-                                            Fax: 03 7213041 - P. . Box: 63951</p>
+                                        <h6>Sanaiya- Al Ain Abu Dhabi UAE, <br>Fax: 03 7213041  Box: 63951
+                                            </p>
                                     </div>
                                 </div>
                                 <div class="widget-contact-grid">
