--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
                             <ul>
                                 <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">alaweerauto@gmail.com</a></li>
                                 <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE 
-                                    Fax: 03 7213041 - P. . Box: 63951</li>
+                                   </li>
                                 <li><i class="fas fa-clock"></i>8 AM To 10 PM
                                 </li>
                             </ul>
@@ -446,7 +446,7 @@
                 <div class="col-lg-6">
                     <div class="title-area text-center">
                         <span class="sub-title">Work Process</span>
-                        <h2 class="sec-title">It Dependable Car Repair Best Solutions</h2>
+                        <h2 class="sec-title">Your Reliable Partner for Quality Auto Parts Solutions</h2>
                     </div>
                 </div>
             </div>
@@ -725,11 +725,12 @@
                     </h4>
                 </div>
             </div>
-            <!-- <div class="social-btn">
-                <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <div class="social-btn">
+                <!-- <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
-            </div> -->
+                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a> -->
+                <a href="https://maps.app.goo.gl/bwsZcFGLsdT4tY7Z7"> <img src="assets/img/icon/google.svg" alt="img"></a>
+            </div>
         </div>
     </div>
 
