--- a/contact.html
+++ b/contact.html
@@ -183,7 +183,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">alaweerauto@gmail.com</a></li>
-                                <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE <br>Fax: 03 7213041 - P. . Box: 63951</li>
+                                <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE</li>
                                 <li><i class="fas fa-clock"></i>8 AM To 10 PM
                                 </li>
                             </ul>
@@ -375,7 +375,7 @@
                         </div>
                         <h6 class="contact-info_title">Address</h6>
                         <p class="contact-info_text">Sanaiya- Al Ain Abu Dhabi UAE </p>
-                        <p class="contact-info_text">Fax: 03 7213041 - P. . Box: 63951</p>
+                        <p class="contact-info_text">Fax: 03 7213041 -  Box: 63951</p>
                     </div>
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-md-6">
@@ -501,11 +501,12 @@
                     </h4>
                 </div>
             </div>
-            <!-- <div class="social-btn">
-                <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <div class="social-btn">
+                <!-- <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
-            </div> -->
+                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a> -->
+                <a href="https://maps.app.goo.gl/bwsZcFGLsdT4tY7Z7"> <img src="assets/img/icon/google.svg" alt="img"></a>
+            </div>
         </div>
     </div>
 
@@ -549,7 +550,7 @@
                             <div class="widget-contact">
                                 <p><a href="tel:888123456765">03 7213838</a></p>
                                 <p><a href="mailto:infoname@mail.com">alaweerauto@gmail.com</a></p>
-                                <p>Sanaiya- Al Ain Abu Dhabi UAE  <br>Fax: 03 7213041 - P. . Box: 63951
+                                <p>Sanaiya- Al Ain Abu Dhabi UAE <br> Fax: 03 7213041 Box: 63951 
                                 </p>
                             </div>
                         </div>
