--- a/shop.html
+++ b/shop.html
@@ -409,7 +409,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -428,7 +428,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -447,7 +447,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -466,7 +466,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -485,7 +485,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -504,7 +504,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -523,7 +523,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -542,7 +542,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -561,7 +561,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </span>
-                                    <span class="price"><del>$30</del> $25</span>
+                                    <!-- <span class="price"><del>$30</del> $25</span> -->
                                     <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -667,11 +667,13 @@
                     </h4>
                 </div>
             </div>
-            <!-- <div class="social-btn">
-                <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <div class="social-btn">
+                <!-- <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
-            </div> -->
+                <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a> -->
+                <a href="https://maps.app.goo.gl/bwsZcFGLsdT4tY7Z7"> <img src="assets/img/icon/google.svg" alt="img"></a>
+
+            </div>
         </div>
     </div>
 
@@ -715,7 +717,7 @@
                             <div class="widget-contact">
                                 <p><a href="tel:888123456765">03 7213838</a></p>
                                 <p><a href="mailto:infoname@mail.com">alaweerauto@gmail.com</a></p>
-                                <p>Sanaiya- Al Ain Abu Dhabi UAE <br> Fax: 03 7213041 - P. . Box: 63951</p>
+                                <p>Sanaiya- Al Ain Abu Dhabi UAE <br> Fax: 03 7213041 -  Box: 63951 </p>
                             </div>
                         </div>
                     </div>
