--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo.svg" alt="Al Aweer"></a>
+                <a href="index.html"><img src="assets/img/logo.png" alt="Al Aweer" width="100" height="100"></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
@@ -209,13 +209,13 @@
             <!-- Main Menu Area -->
             <div class="menu-area">
                 <div class="header-navbar-logo">
-                    <a href="index.html"><img src="assets/img/logo-white.svg" alt="logo"></a>
+                    <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                 </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-lg-start justify-content-between">
                         <div class="col-auto d-xl-none d-block">
                             <div class="header-logo">
-                                <a href="index.html"><img src="assets/img/logo-white.svg" alt="logo"></a>
+                                <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                             </div>
                         </div>
                         <div class="col-auto">
@@ -712,7 +712,7 @@
     <div class="container">
         <div class="footer-top-1 bg-theme" style="background-image: url(assets/img/bg/footer-top-bg1-1.png);">
             <div class="footer-logo">
-                <a href="index.html"><img src="assets/img/logo-white.svg" alt="Fixturbo"></a>
+                <a href="index.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
             </div>
             <div class="call-media-wrap">
                 <div class="icon">
