--- a/home-6.html
+++ b/home-6.html
@@ -63,7 +63,7 @@
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo.svg" alt="Fixturbo"></a>
+                <a href="index.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
@@ -182,7 +182,7 @@
                 <div class="row justify-content-center justify-content-md-between align-items-center gy-2">
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+                            <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                         </div>
                     </div>
                     <div class="col-auto d-none d-md-block">
@@ -250,7 +250,7 @@
                     <div class="row align-items-center justify-content-between">
                         <div class="col-auto d-lg-none d-block">
                             <div class="header-logo">
-                                <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+                                <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                             </div>
                         </div>
                         <div class="col-auto d-xl-block d-none header-sticky-none">
@@ -266,7 +266,7 @@
                         </div>
                         <div class="col-auto header-sticky-logo">
                             <div class="header-logo">
-                                <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+                                <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="100" height="100"></a>
                             </div>
                         </div>
                         <div class="col-auto">
@@ -1296,7 +1296,7 @@
     <div class="container">
         <div class="footer-top-3">
             <div class="footer-logo">
-                <a href="index.html"><img src="assets/img/logo-white.svg" alt="Fixturbo"></a>
+                <a href="index.html"><img src="assets/img/logo.png" alt="AlAweer" width="100" height="100"></a>
             </div>
             <h3 class="footer-top-title text-white">Subscribe our newsletter for updates</h3>
             <form class="newsletter-form">
