--- a/home-6.html
+++ b/home-6.html
@@ -191,9 +191,16 @@
                                 <input class="form-control" type="text" placeholder="Find your product">
                                 <select name="subject" id="subject" class="form-select">
                                     <option value="" disabled selected hidden>All categories</option>
-                                    <option value="Construction">Auto Repair</option>
-                                    <option value="Real Estate">Car Repair</option>
-                                    <option value="Industry">Automotive</option>
+                                    <option value="Construction">OEM & Spare Parts
+                                    </option>
+                                    <option value="Real Estate">Aftermarket Components</option>
+                                    <option value="Industry">Vehicle Batteries
+                                    </option>
+                                    <option value="Real Estate">Car Fluids & Coolants</option>
+                                    <option value="Real Estate">Tyres & Wheels
+                                    </option>
+                                    <option value="Real Estate">Car Accessories</option>
+                                    <option value="Real Estate">Lubricants & Oils</option>
                                 </select>
                                 <button class="icon-btn" type="submit"><i class="fas fa-search"></i></button>
                             </form>
@@ -1169,12 +1176,13 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="title-area text-center">
-                        <span class="sub-title">Blog</span>
-                        <h2 class="sec-title">Strategic Solutions For A Thriving Future</h2>
+                        <span class="sub-title">A Token Of Appreciation</span>
+                        <!-- <h2 class="sec-title">Strategic Solutions For A Thriving Future</h2> -->
                     </div>
                 </div>
             </div>
-            <div class="row global-carousel blog-slider slider-shadow" data-slide-show="3" data-lg-slide-show="2" data-md-slide-show="1" data-sm-slide-show="1" data-xs-slide-show="1" data-dots="false">
+            <div classname=""><img src="assets/img/appreciation.jpeg" alt="appreciation" width="200" height="100"></div>
+            <!-- <div class="row global-carousel blog-slider slider-shadow" data-slide-show="3" data-lg-slide-show="2" data-md-slide-show="1" data-sm-slide-show="1" data-xs-slide-show="1" data-dots="false">
                 <div class="col-md-6 col-lg-4">
                     <div class="blog-card style2">
                         <div class="blog-img">
@@ -1289,7 +1297,7 @@
                     </div>
                 </div>
                 
-            </div>
+            </div> -->
         </div>
     </section> 
     
@@ -1318,7 +1326,7 @@
                     <div class="col-md-6 col-xl-3">
                         <div class="widget footer-widget widget-about">
                             <h3 class="widget_title">About Us</h3>
-                            <p class="footer-text mb-30">It is a long established fact that a reader will be distracted</p>
+                            <p class="footer-text mb-30"> At AL Aweer Auto Spare Parts, we’re passionate about delivering top-tier service and parts for your vehicle.</p>
                             <div class="social-btn style3">
                                 <!-- <a href="https://www.instagram.com/" tabindex="-1"><i class="fab fa-instagram"></i></a>
                                 <a href="https://linkedin.com/" tabindex="-1"><i class="fab fa-linkedin-in"></i></a>
