--- a/shop.html
+++ b/shop.html
@@ -410,7 +410,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>    
@@ -429,7 +429,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -448,7 +448,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>   
@@ -467,7 +467,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div> 
@@ -486,7 +486,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div> 
@@ -505,7 +505,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>  
@@ -524,7 +524,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>   
@@ -543,7 +543,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -562,7 +562,7 @@
                                         <i class="fas fa-star"></i>
                                     </span>
                                     <!-- <span class="price"><del>$30</del> $25</span> -->
-                                    <a href="#" class="link-btn">Add to cart <i class="fas fa-arrow-right"></i></a>
+                                    <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div> 
